# cuda-learning

./: .gitignore  Gitee仓库创建和推送指南.md  README.md  sync_md_files.cron.example  sync_md_files.sh  sync_md_files_README.md  学习计划执行指南.md  学习记录表.md  目录索引.md  面试准备.md
AI-Agent/: 大纲.md
AI-Agent/RAG/: TSE-认证RAG资料.md
C++学习/: README.md
C++学习/01-基础语法/: a.out  auto_best_practices.md  auto_comparison  auto_comparison.cpp  auto_compile_time  auto_compile_time.cpp  auto_compile_time_explanation.md  auto_evolution_practice.cpp  auto_limitations  auto_limitations.cpp  auto关键字演进详解.md  auto版本对比速查表.md  const_constexpr_demo  const_constexpr_demo.cpp  const_constexpr_详解.md  const_vs_constexpr  const_vs_constexpr.cpp  constructor_demo  constructor_demo.cpp  cpp_python_comparison.md  day01_class.cpp  day02_template.cpp  day_01_auto.cpp  day_01_for.cpp  day_01_lambda.cpp  day_02_basic_type.cpp  decltype使用说明.md  initialization_list_demo  initialization_list_demo.cpp  lambda_explanation  lambda_explanation.cpp  lambda_vs_function  lambda_vs_function.cpp  new_pointer_demo  new_pointer_demo.cpp  new_pointer_summary.md  new_vs_object  new_vs_object.cpp  param_name_demo  param_name_demo.cpp  (+15 more)
C++学习/01-基础语法/basic_proj/: CMakeLists.txt
C++学习/01-基础语法/basic_proj/include/: math.h
C++学习/01-基础语法/basic_proj/src/: main.cpp  math.cpp
C++学习/01-基础语法/basic_proj/tests/: math_test.cpp
C++学习/01-基础语法/code/: README.md
C++学习/Cplusplus每日一练/0909/: account.cpp
C++学习/学习总结/: README.md
C++学习/学习总结/学习计划/: 学习计划知识库.md
C++学习/每周题目/: README.md
C++学习/每周题目/C++题目/: README.md
CUDA学习/: README.md
CUDA学习/01-基础概念/: CUDA训练题目集.md  README.md  学习进度跟踪.md
CUDA学习/02-内存管理/: 第2周-CUDA内存管理.md
CUDA学习/06-分布式计算/: 第6周-分布式计算.md
CUDA学习/07-项目实践/: 第7周-项目实践.md
CUDA学习/CUDA每日一练/0910_CUDA并行计算题目/: 题目描述.md  题解.md
CUDA学习/CUDA每日一练/0910_线程组织/: thread_organization.cu
CUDA学习/CUDA每日一练/第一章/: a.out  info.cu  说明.md
CUDA学习/chapter2-cuda-programming/2.1-dim_and_index/: ncu_log.txt  trt-cuda
CUDA学习/chapter2-cuda-programming/2.10-bilinear-interpolation/: README.md  a.out
CUDA学习/cuda-c-programming-guide/: a.out  add_vector.cu  grid_test.cu  timer.hpp
CUDA学习/leetgpu/: a.out  test_timer.cpp  timer.hpp
CUDA学习/leetgpu/matrix_mutiplication/: a.out
CUDA学习/每周题目/CUDA题目/: README.md
CUDA学习/每日练习/2025-11-03/: CMakeLists.txt
CUDA每日一练/0909_第二章/: a.out  vector_add1.cu
CUDA每日一练/0910_CUDA并行计算题目/cuda_matrix_lib/: CMakeLists.txt  Makefile  build.sh
CUDA每日一练/0910_CUDA并行计算题目/cuda_matrix_lib/include/cuda_matrix_lib/: error_handler.h
CUDA每日一练/0910_CUDA并行计算题目/cuda_matrix_lib/tests/unit_tests/: test_error_handler.cpp
CUDA每日一练/0910_线程组织/: a.out  题目描述.md
CUDA编程基础/shared_mem/: reduce.cu  report1.nsys-rep  report2.nsys-rep  report3.nsys-rep  report4.nsys-rep  report5.nsys-rep
CUDA项目实战/SHA256暴力破解/: sha256_cracker_cpu  sha256_cracker_cpu.cpp
Cplusplus每日一练/0909/: a.out
CudaSteps/: CUDA编程基础.md
Flash-Attention学习/学习计划/: README.md  源码结构梳理.md
Flash-Attention学习/学习计划/第1周/: 第1周-算法和基础.md
JD/分析报告/: 市场需求分析.md
JD/已收集/按公司分类/: README.md  互联网公司_上海寻梦信息技术有限公司_CUDA_GPU开发工程师_2024-01-15.md  互联网公司_字节跳动_推理框架优化工程师_2024-01-15.md  医疗器械公司_蓝韵影像_CUDA加速工程师_2024-01-15.md  技术公司_深圳市新凯来技术_CUDA开发工程师_2024-01-15.md  自动驾驶公司_深圳元戎启行科技_CUDA_Kernel开发工程师_2024-01-15.md
JD/已收集/按技能分类/: GPU并行计算_CUDA_NVIDIA_2024-01-15.md  GPU并行计算_CUDA_上海寻梦信息技术有限公司_2024-01-15.md  GPU并行计算_CUDA_九同方_2024-01-15.md  GPU并行计算_CUDA_摩尔线程_2024-01-15.md  GPU并行计算_CUDA_深圳元戎启行科技_2024-01-15.md  GPU并行计算_CUDA_深圳市新凯来技术_2024-01-15.md  GPU并行计算_CUDA_蓝韵影像_2024-01-15.md  README.md
JD/已收集/按职位分类/: C++软件研发工程师_CUDA_九同方_2024-01-15.md  CUDA_Kernel开发工程师_深圳元戎启行科技_2024-01-15.md  CUDA加速工程师_蓝韵影像_2024-01-15.md  CUDA开发工程师_上海寻梦信息技术有限公司_2024-01-15.md  README.md  推理框架优化工程师_字节跳动_2024-01-15.md  深度学习框架开发工程师_摩尔线程_2024-01-15.md  高级测试开发_CUDA_NVIDIA_2024-01-15.md
LeetCode每日一练/: hash_table.cpp
Pytorch学习/: CUDA算子实现详解.md  PyTorch源码结构分析.md
Pytorch学习/pytorch算子复现/01_Fill算子/: Grid-Stride-Loop详解.md  README.md  fill_demo.cu
Pytorch学习/pytorch算子复现/02_简化归约算子/: reduce_simple.cu
SGLang学习/: SGLang_CUDA源码分析.md
SGLang学习/算子讲解/: 01_Copy算子.md  02_Activation算子.md  03_Lightning_Attention_Decode.md  04_RoPE算子.md  05_TopK算子.md  06_Fused_Add_RMSNorm.md  README.md
TSE学习/: 2022题目讲解版.md  大纲.md  实践案例模板.md  进度跟踪.md  通用学习模板.md
TSE学习/01-需求阶段/01-需求分析/: README.md  新手教程-从零开始.md  新手练习册.md
TSE学习/02-设计阶段/: README.md
TSE学习/03-测试阶段/: README.md
TSE学习/04-大模型/: README.md
TSE学习/学习总结/: README.md
TSE学习/资料/: KYM-TCO.md  MFQ总结.md
chapter2-cuda-programming/2.1-dim_and_index/: Makefile  a.out  report.ncu-rep  report1.nsys-rep  test_ncu.cu
chapter2-cuda-programming/2.10-bilinear-interpolation/: main.cpp
chapter2-cuda-programming/2.2-cpp_cuda_interactive/: trt-cuda
chapter2-cuda-programming/2.3-matmul-basic/: Makefile
chapter2-cuda-programming/config/: Makefile.config
config/: Makefile.config
cuda-c-programming-guide/: mat_add.cu
leetgpu/: test_timer_gpu.cu
leetgpu/matrix_mutiplication/: matrix_mult.cu  utils.hpp
学习总结/C++/: C++知识库.md
学习总结/CUDA/: CUDA知识库.md
学习总结/JD分析/: JD分析知识库.md
学习总结/TSE/: TSE知识库.md
学习总结/学习计划/: 学习计划知识库.md
文档收集/: .git冲突解决流程指南.md  OpenCL与CUDA对比分析.md  学习记录表.md  目录整理.md
文档收集/AI-Agent/: README.md
文档收集/AI-Agent/RAG/: 基础概念.md
文档收集/C++学习/: README.md
文档收集/CudaSteps/: 项目总结.md
文档收集/Flash-Attention学习/: README.md
文档收集/TSE学习/: 2022题目.md  README.md  学习计划.md  实践案例模板.md  快速开始.md  目录结构说明.md  进度跟踪.md  通用学习模板.md
文档收集/职业发展/: README.md
每周题目/: README.md
每周题目/C++题目/第1周/StringProcessingLib/: CMakeLists.txt
每周题目/C++题目/第1周/StringProcessingLib/docs/: 03_GoogleTest基础教程.md
每周题目/C++题目/第1周/StringProcessingLib/examples/: CMakeLists.txt
每周题目/C++题目/第1周/StringProcessingLib/include/StringProcessingLib/memory_pool/: block_header.h  fixed_size_pool.h
每周题目/C++题目/第1周/StringProcessingLib/src/memory_pool/: CMakeLists.txt
每周题目/C++题目/第1周/StringProcessingLib/tests/unit_tests/: CMakeLists.txt
每周题目/C++题目/第1周/StringProcessingLib/tests/unit_tests/memory_pool/: CMakeLists.txt  test_block_header.cpp  test_fixed_size_pool.cpp
每周题目/C++题目/第1周/StringProcessingLib/面试题/: 06-内存池扩展设计题.md  README.md
每周题目/完成记录/: README.md
每日练习/2025-11-03/: device_count.cu
(+237 files in other folders)
